# Solana_Based_Logistic_Management_System

./: AZURE_DEPLOYMENT_GUIDE.md  AZURE_DEPLOYMENT_README.md  BLOCKCHAIN_COMPLETE_GUIDE.md  BLOCKCHAIN_FAQ.md  BLOCKCHAIN_INTEGRATION_STATUS.md  BLOCKCHAIN_QUICK_START.md  QUICK_START_BLOCKCHAIN.md  README.md  README_WEB3.md  SOLANA_SETUP.md  SYSTEM_COMPLETE_GUIDE.html  SYSTEM_COMPLETE_GUIDE.md  SYSTEM_VERIFICATION.md  USAGE_EXAMPLES.md  WEB3_IMPLEMENTATION_GUIDE.md  application.py  requirements-azure.txt  requirements.txt  startup.sh  tailwind.config.js  test_blockchain_integration.py
app/: config.py  database.py  dependencies.py  main.py
app/auth/: auth_models.py  auth_routes.py  auth_service.py
app/blockchain/: __init__.py  config.py  solana_client.py  solana_transactions.py  solana_verifier.py  tracking_service.py
app/data/: supermarket_data.csv  supermarket_data_processed.csv
app/logistics/: delivery_service.py  gps_tracker.py  logistics_models.py  logistics_routes.py
app/realtime/: realtime_routes.py  websocket_manager.py
app/reports/: report_generator.py  report_models.py  report_routes.py
app/templates/: agentic_forecast.html  base.html  blockchain_tracking.html  dataset_analytics.html  delivery_result.html  homepage.html  login.html  preprocessing.html  quality.html  quantity.html  reports.html  select_customer.html  shipment_result.html  tracking.html  tracking_event_result.html  tracking_history_result.html  upload.html  verify_gps_result.html  (+2 more)
solana-program/: Anchor.toml  Cargo.toml  build.bat  build.sh  deploy.sh
solana-program/src/: lib.rs
(+8 files in other folders)
